Add release workflow and finalize install configuration
- Add VERSION file at repo root (1.0.0)
- Add build.bat release command to create versioned zip packages
- Set default install path to C:\signloop-config
- Set GitHub org to signrescue in URLs
- Add shortcut tip after install
- Update license copyright to Jeff Singer

Implementation assisted by Claude (Anthropic)

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,11 @@ signloop-config/bin/*.exe
 # Keep the bin directory structure
 !signloop-config/bin/.gitkeep
 
+# Generated version file (stamped during release)
+signloop-config/VERSION
+
+# Release packages
+*.zip
+
 # Claude Code local settings
 .claude/
